--- a/translations/kangyur/translations/062-006_toh206_pure_sustenance_of_food.xml
+++ b/translations/kangyur/translations/062-006_toh206_pure_sustenance_of_food.xml
@@ -24,10 +24,10 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -59,7 +59,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-02T07:10:26.782Z" user="admin">02/09/2022 07:10:26</note>
+                <note type="lastUpdated" date-time="2022-09-20T09:11:31.516Z" user="admin">20/09/2022 09:11:31</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:44:44.856Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:44:44.856Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:06:51.159Z" user="line-tofte">3</note>
@@ -104,7 +104,9 @@
                 <note type="updated" update="text-version" value="0.0.18" date-time="2022-08-26T08:10:50.947Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2022-09-01T19:00:15.697Z" user="martina-cotter">1.a</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-01T19:00:15.697Z" user="martina-cotter">First published version</note>
-                <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-02T07:10:20.554Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-02T07:10:20.554Z" user="line-tofte">Auto (update-contributors) + glossary activated (AR)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2022-09-20T09:11:23.456Z" user="sameer">1</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2022-09-20T09:11:23.456Z" user="sameer">1.0.2</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
