--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -28,7 +28,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.5 <date>2022</date>
+                <edition>v 1.2.6 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-30T11:39:43.741Z" user="admin">30/09/2022 11:39:43</note>
+        <note type="lastUpdated" date-time="2022-09-30T14:59:20.203Z" user="admin">30/09/2022 14:59:20</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
@@ -109,6 +109,7 @@
           <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-29T16:11:06.845Z" user="john">Adjustment to colophon.</note>
           <note type="updated" update="text-version" value="1.2.4" date-time="2022-09-29T18:35:43.869Z" user="john">Added glossary entry for Bari.</note>
           <note type="updated" update="text-version" value="1.2.5" date-time="2022-09-30T11:39:39.707Z" user="john">Further edits to short mantras and notes.</note>
+          <note type="updated" update="text-version" value="1.2.6" date-time="2022-09-30T14:59:16.109Z" user="john">Further small edits.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -368,8 +369,8 @@
                     </p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-090-038-33"/>
-          <p tid="108">This text was translated into Tibetan by the Indian paṇḍita Dharmasena and the 
-            Khampa lotsāwa Bari Chödrak, and it is therefore an eleventh- or twelfth-century translation.
+          <p tid="108">This text was translated into Tibetan by the Indian paṇḍita Dharmasena and  
+            Khampa Lotsāwa Bari Chödrak, and it is therefore an eleventh- or twelfth-century translation.
             However, the imperial Phangthangma catalog lists one <title xml:lang="Sa-Ltn">Uṣṇīṣavijayā-dhāraṇī-vidhisahitā</title>, which, even if not the same as the present
             text, is certainly a work of a similar type.<note place="end" xml:id="UT22084-090-038-34"> Phangthangma (2003), p. 23. While the phrase <foreign xml:lang="Bo-Ltn" type="quote">cho ga dang bcas pa</foreign> (Skt. <foreign xml:lang="Sa-Ltn" type="term">vidhisahitā</foreign>) is functionally equivalent to
               the phrase <foreign xml:lang="Bo-Ltn" type="quote">rtog pa dang bcas pa</foreign>
@@ -563,34 +564,34 @@
               sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite | mudre mudre mahāmudre | mahāmudrāmantrapadaiḥ
                 svāhā.<note place="end" xml:id="UT22084-090-038-51"> Hidas has translated the
                 dhāraṇī based on his edition, and rather than retranslate it, we give his
-                translation here. Substantive variants between the Sanskrit basis for his translation and the Degé have been noted above. “<mantra xml:lang="en" type="dharani">Oṃ veneration to the
-                  glorious Buddha distinguished in all the Three Worlds. Namely, oṃ bhrūṃ bhrūṃ
+                translation here. Substantive variants between the Sanskrit basis for his translation and the Degé have been noted above. “<mantra xml:lang="en" type="dharani">Oṁ veneration to the
+                  glorious Buddha distinguished in all the Three Worlds. Namely, oṁ bhrūṃ bhrūṃ
                   bhrūṃ, purge, purge, purify, purify, O Unequalled Enveloping Splendor Sparkle
                   Destiny Sky, O the One of Purified Nature, O the One Purified by the Topknot
                   Victory, let all Tathāgatas consecrate me with consecrations of the nectar of the
-                  excellent Sugata’s words along with great seals and mantrapadas, oṃ bring, bring,
+                  excellent Sugata’s words along with great seals and mantrapadas, oṁ bring, bring,
                   O the One who Nourishes Life, purge, purge, purify, purify, O the One Purified by
                   Sky Nature, O the One Purified by the Topknot Victory, O the One Impelled by
                   Thousand Rays, O the One Beholding all Tathāgatas, O the One Fulfilling the Six
                   Perfections, O Mother of all Tathāgatas, O the One Established in the Ten Stages,
-                  O the One Empowered by the Empowerment of the Heart of all Tathāgatas, oṃ O Seal,
+                  O the One Empowered by the Empowerment of the Heart of all Tathāgatas, oṁ O Seal,
                   O Seal, O Great Seal, O the One Purified by the Firmness of the Vajra Body, O the
                   One Purged of all Obscurations Resulting from Actions, turn back for me O
                   Life-purged One, O the One Empowered by the Empowerment of the Vow of all
-                  Tathāgatas, oṃ muni muni, mahāmuni, vimuni vimuni, mahāvimuni, mati mati,
+                  Tathāgatas, oṁ muni muni, mahāmuni, vimuni vimuni, mahāvimuni, mati mati,
                   mahāmati, mamati, sumati, O the One Purified by Truth and the True Goal, O the One
-                  Purged by a Burst Open Mind, oṃ he he, triumph triumph, succeed succeed, recollect
+                  Purged by a Burst Open Mind, oṁ he he, triumph triumph, succeed succeed, recollect
                   recollect, manifest manifest, expand expand, O the One Empowered by the
-                  Empowerment of all Buddhas, oṃ O Pure One, O Pure One, O Awakened One, O Awakened
+                  Empowerment of all Buddhas, oṁ O Pure One, O Pure One, O Awakened One, O Awakened
                   One, O Vajra, O Vajra, O Great Vajra, O Vajra-essence, O Victory-essence, O
                   Triumph-essence, O Vajra-flame-essence, O Vajra-born, O Vajra-produced, O Vajra, O
                   the One with a Vajra, let my body become a vajra and that of all beings, let there
                   be body-purification for me and purification of all destinies, O the One Empowered
                   by the Empowerment of the Heart of all Tathāgatas, let all Tathāgatas provide
-                  encouragement, oṃ awake awake, succeed succeed, awaken awaken, wake up, wake up,
+                  encouragement, oṁ awake awake, succeed succeed, awaken awaken, wake up, wake up,
                   liberate liberate, release release, purge purge, purify purify, liberate
                   completely, O the One Purified by an Enveloping Ray, O the One Empowered by the
-                  Empowerment of the Heart of all Tathāgatas, oṃ O Seal O Seal, O Great Seal, O
+                  Empowerment of the Heart of all Tathāgatas, oṁ O Seal O Seal, O Great Seal, O
                   Great Seal and Mantrapada svāhā</mantra>” (Hidas 2020, p.
             154).</note>
                         </mantra>
@@ -938,7 +939,7 @@
               <distinct>the limitless life of all tathāgatas</distinct>:</p>
           <milestone unit="chunk" xml:id="UT22084-090-038-115"/>
           <p rend="mantra" tid="70">
-                        <mantra xml:lang="Sa-Ltn">“oṃ amṛte<note place="end" xml:id="UT22084-090-038-116"> There appears to have been considerable
+                        <mantra xml:lang="Sa-Ltn">“oṁ amṛte<note place="end" xml:id="UT22084-090-038-116"> There appears to have been considerable
                 confusion—especially, but not exclusively, in Tibetan—in the transmission of this
                 dhāraṇī, which also appears in the parallel passage in <ref target="https://read.84000.co/translation/toh595.html#UT22084-090-039-69">Toh
                   595</ref> (folio
@@ -964,11 +965,11 @@
               amṛtasaṃbhave amṛtavikrānte amṛtagate<note place="end" xml:id="UT22084-090-038-117">
                 We have emended <foreign xml:lang="Sa-Ltn" type="term">gādre</foreign> to <foreign xml:lang="Sa-Ltn" type="term">gate</foreign> based on the parallel passage in Toh
                 595, folio 239.b.</note> amṛtagāmini amṛtāyurdade<note place="end" xml:id="UT22084-090-038-118"> The Yongle, Lithang, Choné, and Kanxi Kangyurs here 
-                  read <foreign xml:lang="Sa-Ltn" type="term">āyurdhāte</foreign>. A more “correct” rendering of the Sanskrit could be 
-                  <foreign xml:lang="Sa-Ltn" type="term">āyurdatte</foreign>, which is attested in one parallel instance
+                  read <foreign xml:lang="Sa-Ltn" type="term">°āyurdhāte</foreign>. A more “correct” rendering of the Sanskrit could be 
+                  <foreign xml:lang="Sa-Ltn" type="term">°āyurdatte</foreign>, which is attested in one parallel instance
                   in Toh 595 (see <ref target="https://read.84000.co/translation/toh595.html#UT22084-090-039-92">1.26</ref>), though not in another 
-                  (<ref target="https://read.84000-translate.org/translation/toh595.html#UT22084-090-039-69">1.14</ref>. 
-                  Nevertheless, <foreign xml:lang="Sa-Ltn" type="term">āyurdade</foreign> as here in the Degé is hallowed by
+                  (<ref target="https://read.84000-translate.org/translation/toh595.html#UT22084-090-039-69">1.14</ref>). 
+                  Nevertheless, <foreign xml:lang="Sa-Ltn" type="term">°āyurdade</foreign> as here in the Degé is hallowed by
                   usage in the mantras associated with Uṣṇīṣavijayā in a wide range of sādhanas and other texts in Tibetan.</note>
               gaganakīrtikare sarvakleśakṣayaṃ kariye svāhā</mantra>
                     </p>
@@ -1055,11 +1056,11 @@
             right hands hold a crossed vajra at his heart, Amitābha seated on a lotus, an arrow, and
             the gesture of supreme generosity. His left hands hold a lasso with the threatening
             gesture, a bow, the gesture granting freedom from fear, and a vase. On his head is the
-            syllable <mantra xml:lang="Sa-Ltn" type="syllable">oṃ</mantra> in a caitya, at his
+            syllable <mantra xml:lang="Sa-Ltn" type="syllable">oṁ</mantra> in a caitya, at his
             throat is the syllable <mantra xml:lang="Sa-Ltn" type="syllable">āḥ</mantra>, and at his
-            heart the syllable <mantra xml:lang="Sa-Ltn" type="syllable">huṃ</mantra>. At his
-            forehead is <mantra xml:lang="Sa-Ltn" type="syllable">hraṃ</mantra>, at his navel
-              <mantra xml:lang="Sa-Ltn" type="syllable">hrīḥ</mantra>, and at his two feet <mantra xml:lang="Sa-Ltn" type="syllable">aṃ aḥ</mantra>. Arrange these syllables on his body
+            heart the syllable <mantra xml:lang="Sa-Ltn" type="syllable">huṁ</mantra>. At his
+            forehead is <mantra xml:lang="Sa-Ltn" type="syllable">hraṁ</mantra>, at his navel
+              <mantra xml:lang="Sa-Ltn" type="syllable">hrīḥ</mantra>, and at his two feet <mantra xml:lang="Sa-Ltn" type="syllable">aṁ aḥ</mantra>. Arrange these syllables on his body
             and include the phrase <mantra xml:lang="Sa-Ltn">rakṣa svāhā</mantra> with one’s own
             name inside it. </p>
           <milestone unit="chunk" xml:id="UT22084-090-038-133"/>
@@ -1116,10 +1117,10 @@
             in the center of the hearth, recite the <distinct>crown victory</distinct> dhāraṇī, and
             offer three full ladles. One can also perform the fire offering while reciting the
             dhāraṇī together with the life-extending and intelligence-sharpening dhāraṇī 
-            <mantra xml:lang="Sa-Ltn">oṃ amṛtāyurdade<note place="end" xml:id="UT22084-090-038-142">The Degé Kangyur 
-              here reads <foreign xml:lang="Sa-Ltn" type="term">āyurdate</foreign>. The 
-                spelling <foreign xml:lang="Sa-Ltn" type="term">āyurdade</foreign>, the most common
-              in later Tibetan sādhanas, is attested for this instance only
+            <mantra xml:lang="Sa-Ltn">oṁ amṛtāyurdade<note place="end" xml:id="UT22084-090-038-142">The Degé Kangyur 
+              here reads <foreign xml:lang="Sa-Ltn" type="term">°āyurdate</foreign>. The 
+                spelling <foreign xml:lang="Sa-Ltn" type="term">°āyurdade</foreign>, the most common
+              in later Tibetan sādhanas, is attested, at this point in the present text, only
               in the Narthang Kangyur, other Kangyurs having a variety of different renderings. 
               See <ptr target="#UT22084-090-038-118"/>.</note> svāhā</mantra> eight
             hundred times at the three times of the day.</p>
@@ -1143,7 +1144,7 @@
               crown victory</distinct> dhāraṇī together with the life-extending and
             intelligence-sharpening dhāraṇī<note place="end" xml:id="UT22084-090-038-148"> The fact
               that “life-extending and intelligence-sharpening” here refers to the additional
-              dhāraṇī <mantra xml:lang="Sa-Ltn">oṃ amṛtāyurdade svāhā</mantra> is suggested by the
+              dhāraṇī <mantra xml:lang="Sa-Ltn">oṁ amṛtāyurdade svāhā</mantra> is suggested by the
               passage above, which refers to that dhāraṇī with precisely that phrase in the context
               of adding it to the main <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣavijayā</foreign>
               dhāraṇī.</note> while performing the fire offering one hundred thousand times. If one
