--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -30,7 +30,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.1 <date>2022</date>
+                <edition>v 1.2.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-29T16:45:34.763Z" user="admin">29/09/2022 16:45:34</note>
+        <note type="lastUpdated" date-time="2022-09-30T15:25:45.752Z" user="admin">30/09/2022 15:25:45</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -113,6 +113,7 @@
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-11T08:23:31.074Z" user="sameer">First published version</note>
           <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:45:30.942Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
           <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T16:45:30.58Z" user="john">Added material to introduction, notes, and bibliography in line with the other texts of the group.</note>
+          <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-30T15:25:41.735Z" user="john">Edits to text and notes re āyurdatte/-dade.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -545,34 +546,34 @@
               śodhaya śodhaya | viśodhaya viśodhaya | samantamocaya mocaya | samantaraśmipariśuddhe | sarvatathāgatahṛdayādhiṣṭhānādhiṣṭhite | mudre mudre mahāmudre |
               mahāmudrāmantrapadaiḥ svāhā.<note place="end" xml:id="UT22084-090-039-52"> Hidas has
                 translated the dhāraṇī based on his edition, and rather than retranslate it, we give
-                his translation here. Substantive variants between the Sanskrit basis for his translation and the Degé have been noted above. “<mantra xml:lang="en" type="dharani">Oṃ veneration to the
-                  glorious Buddha distinguished in all the Three Worlds. Namely, oṃ bhrūṃ bhrūṃ
+                his translation here. Substantive variants between the Sanskrit basis for his translation and the Degé have been noted above. “<mantra xml:lang="en" type="dharani">Oṁ veneration to the
+                  glorious Buddha distinguished in all the Three Worlds. Namely, oṁ bhrūṃ bhrūṃ
                   bhrūṃ, purge, purge, purify, purify, O Unequalled Enveloping Splendor Sparkle
                   Destiny Sky, O the One of Purified Nature, O the One Purified by the Topknot
                   Victory, let all Tathāgatas consecrate me with consecrations of the nectar of the
-                  excellent Sugata’s words along with great seals and mantrapadas, oṃ bring, bring,
+                  excellent Sugata’s words along with great seals and mantrapadas, oṁ bring, bring,
                   O the One who Nourishes Life, purge, purge, purify, purify, O the One Purified by
                   Sky Nature, O the One Purified by the Topknot Victory, O the One Impelled by
                   Thousand Rays, O the One Beholding all Tathāgatas, O the One Fulfilling the Six
                   Perfections, O Mother of all Tathāgatas, O the One Established in the Ten Stages,
-                  O the One Empowered by the Empowerment of the Heart of all Tathāgatas, oṃ O Seal,
+                  O the One Empowered by the Empowerment of the Heart of all Tathāgatas, oṁ O Seal,
                   O Seal, O Great Seal, O the One Purified by the Firmness of the Vajra Body, O the
                   One Purged of all Obscurations Resulting from Actions, turn back for me O
                   Life-purged One, O the One Empowered by the Empowerment of the Vow of all
-                  Tathāgatas, oṃ muni muni, mahāmuni, vimuni vimuni, mahāvimuni, mati mati,
+                  Tathāgatas, oṁ muni muni, mahāmuni, vimuni vimuni, mahāvimuni, mati mati,
                   mahāmati, mamati, sumati, O the One Purified by Truth and the True Goal, O the One
-                  Purged by a Burst Open Mind, oṃ he he, triumph triumph, succeed succeed, recollect
+                  Purged by a Burst Open Mind, oṁ he he, triumph triumph, succeed succeed, recollect
                   recollect, manifest manifest, expand expand, O the One Empowered by the
-                  Empowerment of all Buddhas, oṃ O Pure One, O Pure One, O Awakened One, O Awakened
+                  Empowerment of all Buddhas, oṁ O Pure One, O Pure One, O Awakened One, O Awakened
                   One, O Vajra, O Vajra, O Great Vajra, O Vajra-essence, O Victory-essence, O
                   Triumph-essence, O Vajra-flame-essence, O Vajra-born, O Vajra-produced, O Vajra, O
                   the One with a Vajra, let my body become a vajra and that of all beings, let there
                   be body-purification for me and purification of all destinies, O the One Empowered
                   by the Empowerment of the Heart of all Tathāgatas, let all Tathāgatas provide
-                  encouragement, oṃ awake awake, succeed succeed, awaken awaken, wake up, wake up,
+                  encouragement, oṁ awake awake, succeed succeed, awaken awaken, wake up, wake up,
                   liberate liberate, release release, purge purge, purify purify, liberate
                   completely, O the One Purified by an Enveloping Ray, O the One Empowered by the
-                  Empowerment of the Heart of all Tathāgatas, oṃ O Seal O Seal, O Great Seal, O
+                  Empowerment of the Heart of all Tathāgatas, oṁ O Seal O Seal, O Great Seal, O
                   Great Seal and Mantrapada svāhā</mantra>” (Hidas 2020, p. 154). The exact parallel
                 with Toh 594 that began with the start of the text ends here (<ref target="http://read.84000.co/translation/toh594.html#UT22084-090-038-49">Toh
                   594</ref>, folio 230.b.6), but further parallels with a different section of <ref target="http://read.84000.co/translation/toh594.html#UT22084-090-038-99">Toh
@@ -671,7 +672,7 @@
               <distinct>the limitless life of all tathāgatas</distinct>:</p>
           <milestone unit="chunk" xml:id="UT22084-090-039-69"/>
           <p rend="mantra" tid="44">
-                        <mantra xml:lang="Sa-Ltn">“oṃ amṛte<note place="end" xml:id="UT22084-090-039-70"> There appears to have been considerable
+                        <mantra xml:lang="Sa-Ltn">“oṁ amṛte<note place="end" xml:id="UT22084-090-039-70"> There appears to have been considerable
                 confusion—especially, but not exclusively, in Tibetan—in the transmission of this
                 dhāraṇī, which also appears in the parallel passage in <ref target="https://read.84000.co/translation/toh594.html#UT22084-090-038-115">Toh
                   594</ref>. Here, in Toh 595, the Degé recension correctly transmits the dhāraṇī
@@ -688,13 +689,18 @@
                 111n42 and n43 and p. 112n47). He also, however, cites the <title xml:lang="Sa-Ltn">Uṣṇīṣavijayāsādhana</title> in the <title xml:lang="Sa-Ltn">Sādhanamālā</title>,
                 which preserves the readings <foreign xml:lang="Sa-Ltn" type="quote">amite
                   amitodbhave</foreign>, etc. (See Hidas 2014, p. 112n47). The version preserved in
-                the modern Tibetan tradition of a short part of this dhāraṇī (also found below in
-                the present text) that is associated with Uṣṇīṣavijayā reads <foreign xml:lang="Sa-Ltn" type="quote">om amṛta āyurdatte svāhā</foreign>, likewise using
+                the modern Tibetan tradition, in most cases, of a short part of this dhāraṇī (also found below in
+                the present text) that is associated with Uṣṇīṣavijayā reads <foreign xml:lang="Sa-Ltn" type="quote">oṁ amṛta āyurdade svāhā</foreign>, likewise using
                 the form <foreign xml:lang="Sa-Ltn" type="term">amṛta</foreign>. On the
                 preponderance of the evidence, we have thus adopted the reading <foreign xml:lang="Sa-Ltn" type="term">amṛte</foreign> here. </note> amṛtodbhave<note place="end" xml:id="UT22084-090-039-71"> The parallel passage in <ref target="https://read.84000.co/translation/toh594.html#UT22084-090-038-115">Toh
                   594</ref> here adds <foreign xml:lang="Sa-Ltn" type="term">amṛtasaṃbhave</foreign>, but this is absent in all recensions of our text. </note>
-              amṛtavikrānte amṛtagate amṛtagāmini amṛtāyurdatte<note place="end" xml:id="UT22084-090-039-72"> We have emended from <foreign xml:lang="Sa-Ltn" type="term">āyurdate</foreign> to the more correct form <foreign xml:lang="Sa-Ltn" type="term">āyurdatte</foreign> following the extract from this dhāraṇī repeated
-                below in our text.</note> gaganakīrtikare sarvakleśakṣayaṃ kariye<note place="end" xml:id="UT22084-090-039-73"> We read <foreign xml:lang="Sa-Ltn" type="term">kariye</foreign> following the Yongle, Lithang, Peking, and Choné Kangyurs and
+              amṛtavikrānte amṛtagate amṛtagāmini amṛtāyurdatte<note place="end" xml:id="UT22084-090-039-72"> We have emended from 
+                the Degé reading here, <foreign xml:lang="Sa-Ltn" type="term">āyurdate</foreign>, to the theoretically more “correct” form 
+                <foreign xml:lang="Sa-Ltn" type="term">āyurdatte</foreign> on the basis that the latter is attested later in this same text, in the extract from this dhāraṇī repeated
+                below at <ptr target="#UT22084-090-039-92"/>. However, the alternative spelling <foreign xml:lang="Sa-Ltn" type="term">āyurdade</foreign> is 
+                common elsewhere in this group of Uṣṇīṣavijayā texts, and seems to be the preponderant form in use in
+              numerous sādhanas and other texts in the Tibetan Buddhist tradition.</note> 
+            gaganakīrtikare sarvakleśakṣayaṃ kariye<note place="end" xml:id="UT22084-090-039-73"> We read <foreign xml:lang="Sa-Ltn" type="term">kariye</foreign> following the Yongle, Lithang, Peking, and Choné Kangyurs and
                 the parallel passage from <ref target="https://read.84000.co/translation/toh594.html#UT22084-090-038-115">Toh
                   594</ref>, rather than <foreign xml:lang="Sa-Ltn" type="term">karīye</foreign> in
                 the Degé. </note> svāhā</mantra>
@@ -775,9 +781,9 @@
             charming and white. His right hands hold a crossed vajra at his heart, Amitābha seated
             on a lotus, an arrow, and the gesture of supreme generosity. His left hands hold a lasso
             with the threatening gesture, a bow, the gesture granting freedom from fear, and a vase.
-            On his head is the syllable <mantra xml:lang="Sa-Ltn" type="syllable">oṃ</mantra> in a
-            caitya, at his throat is the syllable <mantra xml:lang="Sa-Ltn" type="syllable">āḥ</mantra>, and at his heart the syllable <mantra xml:lang="Sa-Ltn" type="syllable">huṃ</mantra>. At his forehead is <mantra xml:lang="Sa-Ltn" type="syllable">hraṃ</mantra>, at his navel <mantra xml:lang="Sa-Ltn" type="syllable">hrīḥ</mantra>,
-            and at his two feet <mantra xml:lang="Sa-Ltn" type="syllable">aṃ aḥ</mantra>. Arrange
+            On his head is the syllable <mantra xml:lang="Sa-Ltn" type="syllable">oṁ</mantra> in a
+            caitya, at his throat is the syllable <mantra xml:lang="Sa-Ltn" type="syllable">āḥ</mantra>, and at his heart the syllable <mantra xml:lang="Sa-Ltn" type="syllable">huṁ</mantra>. At his forehead is <mantra xml:lang="Sa-Ltn" type="syllable">hraṁ</mantra>, at his navel <mantra xml:lang="Sa-Ltn" type="syllable">hrīḥ</mantra>,
+            and at his two feet <mantra xml:lang="Sa-Ltn" type="syllable">aṁ aḥ</mantra>. Arrange
             these syllables on his body and include the phrase <foreign xml:lang="Sa-Ltn" type="quote">rakṣa svāhā</foreign> with one’s own name inside it. </p>
           <milestone unit="chunk" xml:id="UT22084-090-039-87"/>
           <p tid="54">“On either side of him are Padmapāṇi and Vajradhara holding white tail whisks.
@@ -821,8 +827,9 @@
             full ladles in the fire and sprinkle it with cleansing water. <ref cRef="F.241.b" type="folio" xml:id="UT22084-090-039-179"/> Visualize Amitāyus clearly in the center
             of the hearth, recite the <distinct>crown victory</distinct> dhāraṇī, and offer three
             full ladles. One can also perform the fire offering while reciting the dhāraṇī together
-            with the life-extending and intelligence-sharpening dhāraṇī <mantra xml:lang="Sa-Ltn">oṃ
-              amṛtāyurdatte svāhā</mantra> eight hundred times at the three times of the day.</p>
+            with the life-extending and intelligence-sharpening dhāraṇī <mantra xml:lang="Sa-Ltn">oṁ
+              amṛtāyurdatte svāhā</mantra>
+                        <note place="end" xml:id="UT22084-090-039-201">See <ptr target="#UT22084-090-039-72"/>.</note> eight hundred times at the three times of the day.</p>
           <milestone unit="chunk" xml:id="UT22084-090-039-93"/>
           <p tid="60">“If one recites the <distinct>crown victory</distinct> dhāraṇī seven times one
             will have a long life, a sharp intellect, and happiness and be free from illness. </p>
@@ -840,7 +847,7 @@
               crown victory</distinct> dhāraṇī together with the life-extending and
             intelligence-sharpening dhāraṇī<note place="end" xml:id="UT22084-090-039-98"> The fact
               that “life-extending and intelligence-sharpening” here refers to the additional
-              dhāraṇī <mantra xml:lang="Sa-Ltn">oṃ amṛtāyurdatte svāhā</mantra> is suggested by the
+              dhāraṇī <mantra xml:lang="Sa-Ltn">oṁ amṛtāyurdatte svāhā</mantra> is suggested by the
               passage above, which refers to that dhāraṇī with precisely that phrase in the context
               of adding it to the main <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣavijayā</foreign>
               dhāraṇī.</note> while performing the fire offering one hundred thousand times. If one
